webserver-auto/nohup.out
  File "/home/chrizz/Documents/webserver-auto/hello.py", line 10
    app.run(host='127.0.0.1', port=$8001)
                                   ^
SyntaxError: invalid syntax
 * Serving Flask app 'hello'
 * Debug mode: off
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on http://127.0.0.1:8001
[33mPress CTRL+C to quit[0m
127.0.0.1 - - [24/Jun/2024 15:36:00] "[33mGET / HTTP/1.1[0m" 404 -
 * Serving Flask app 'hello'
 * Debug mode: off
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on http://127.0.0.1:8001
[33mPress CTRL+C to quit[0m
127.0.0.1 - - [24/Jun/2024 15:41:56] "[33mGET / HTTP/1.1[0m" 404 -
 * Serving Flask app 'hello'
 * Debug mode: off
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on http://127.0.0.1:8001
[33mPress CTRL+C to quit[0m
127.0.0.1 - - [24/Jun/2024 15:45:02] "GET /hello HTTP/1.0" 200 -
127.0.0.1 - - [24/Jun/2024 15:45:04] "GET /hello HTTP/1.0" 200 -
